# benchify

./: .gitignore  Cargo.toml  README.md  test.toml
src/: main.rs  template.toml  wait_for_free_cpu.rs
