[package]
name = "benchify"
version = "0.1.0"
authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
color-eyre = { version = "0.5", default-features = false }
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
indicatif = "0.15.0"
csv = "1.1.3"

[profile.dev.package.backtrace]
opt-level = 3
