[package]
name = "benchify"
version = "0.4.5"
authors = ["Jay Bosamiya <jaybosamiya@gmail.com>"]
edition = "2021"
license-file = "./LICENSE"
readme = "README.md"
description = "A tool for declaratively specifying and running benchmarks of different tools against various tests"
homepage = "https://github.com/jaybosamiya/benchify/"
repository = "https://github.com/jaybosamiya/benchify/"

[dependencies]
log = "0.4.19"
pretty_env_logger = "0.5.0"
color-eyre = { version = "0.6", default-features = false }
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
indicatif = "0.15.0"
csv = "1.2.2"
rayon = "1.7.0"
num_cpus = "1.16.0"
lazy_static = "1.4.0"

[profile.dev.package.backtrace]
opt-level = 3
